--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<script src="http://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
 	<meta charset="utf-8">
 	<title>MEASUR</title>
 	<base href="./">
@@ -95,8 +96,13 @@
 </head>
 
 <body>
+	<div id="google_translate_element"></div>
+	<script type="text/javascript">
+		function googleTranslateElementInit() {
+			new google.translate.TranslateElement({ pageLanguage: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE }, 'google_translate_element');
+		}
+	</script>
 	<app-root>
-
 		<div class="loading-screen container-fluid">
 			<div class="row">
 				<div class="col-md-2 sidebar-bg">
@@ -118,7 +124,6 @@
 				</div>
 			</div>
 		</div>
-
 	</app-root>
 
 	<script>
@@ -127,7 +132,7 @@
 		var psatAddon = require('../node_modules/amo-tools-suite/build/Release/psat.node');
 		var db = require('../node_modules/amo-tools-suite/build/Release/db.node');
 		var standaloneAddon = require('../node_modules/amo-tools-suite/build/Release/standalone.node');
-    var steamAddon = require('../node_modules/amo-tools-suite/build/Release/ssmt.node');
+		var steamAddon = require('../node_modules/amo-tools-suite/build/Release/ssmt.node');
 		var packageJson = require('../package.json');
 	//	var autoUpdater = require('electron-updater');
 		//var json2csv = require("../node_modules/dist/json2csv.js");
